--- a/release/toc.html
+++ b/release/toc.html
@@ -4,27 +4,28 @@
 <div><h1><b>TABLE OF CONTENTS</b></h1><br/>
 <h3><b>Chapter 1<br/>
 <a href="book.html#_introduction">Introduction</a></b></h3><br/>
-<a href="book.html#_why_use_backbone_js"><b>Why use Backbone.js</b></a><br/>
+<a href="book.html#_the_shift_to_client_side_web_applications"><b>The shift to client-side web applications</b></a><br/>
+<a href="book.html#_goals_for_this_book"><b>Goals for this book</b></a><br/>
+<a href="book.html#_alternatives_to_backbone"><b>Alternatives to Backbone</b></a><br/>
 <a href="book.html#_the_example_application"><b>The Example Application</b></a><br/>
 <h3><b>Chapter 2<br/>
 <a href="book.html#_getting_up_to_speed">Getting up to speed</a></b></h3><br/>
-<a href="book.html#_backbone_js_online_resources"><b>Backbone.js online resources</b></a><br/>
-<a href="book.html#_javascript_online_resources_and_books"><b>JavaScript online resources and books</b></a><br/>
+<a href="book.html#_backbone_online_resources"><b>Backbone.online resources</b></a><br/>
+<a href="book.html#_javascript_resources"><b>JavaScript resources</b></a><br/>
 <h3><b>Chapter 3<br/>
 <a href="book.html#_organization">Organization</a></b></h3><br/>
-<a href="book.html#_backbone_js_and_mvc"><b>Backbone.js and MVC</b></a><br/>
+<a href="book.html#_backbone_and_mvc"><b>Backbone and MVC</b></a><br/>
 <a href="book.html#_what_goes_where"><b>What Goes Where</b></a><br/>
 <a href="book.html#_namespacing_your_application"><b>Namespacing your application</b></a><br/>
 <a href="book.html#_mixins"><b>Mixins</b></a><br/>
 <h3><b>Chapter 4<br/>
 <a href="book.html#_rails_integration">Rails Integration</a></b></h3><br/>
-<a href="book.html#_organizing_your_backbone_js_code_in_a_rails_app"><b>Organizing your Backbone.js code in a Rails app</b></a><br/>
+<a href="book.html#_organizing_your_backbone_code_in_a_rails_app"><b>Organizing your Backbone code in a Rails app</b></a><br/>
 <a href="book.html#_rails_3_0_and_prior"><b>Rails 3.0 and prior</b></a><br/>
 <a href="book.html#_rails_3_1"><b>Rails 3.1</b></a><br/>
-<a href="book.html#_an_overview_of_the_stack_connecting_rails_and_backbone_js"><b>An Overview of the Stack: Connecting Rails and Backbone.js</b></a><br/>
+<a href="book.html#_an_overview_of_the_stack_connecting_rails_and_backbone"><b>An Overview of the Stack: Connecting Rails and Backbone</b></a><br/>
 <a href="book.html#_customizing_your_rails_generated_json"><b>Customizing your Rails-generated JSON</b></a><br/>
-<a href="book.html#_converting_an_existing_page_view_area_to_use_backbone_js"><b>Converting an existing page/view area to use Backbone.js</b></a><br/>
-<a href="book.html#_automatically_using_the_rails_authentication_token"><b>Automatically using the Rails authentication token</b></a><br/>
+<a href="book.html#_converting_an_existing_page_view_area_to_use_backbone"><b>Converting an existing page/view area to use Backbone</b></a><br/>
 <h3><b>Chapter 5<br/>
 <a href="book.html#_routers_views_and_templates">Routers, Views, and Templates</a></b></h3><br/>
 <a href="book.html#_view_explanation"><b>View explanation</b></a><br/>
@@ -42,6 +43,7 @@
 <a href="book.html#_filters_and_sorting"><b>Filters and sorting</b></a><br/>
 <a href="book.html#_validations"><b>Validations</b></a><br/>
 <a href="book.html#_model_relationships"><b>Model relationships</b></a><br/>
+<a href="book.html#_complex_nested_models"><b>Complex nested models</b></a><br/>
 <a href="book.html#_duplicating_business_logic_across_the_client_and_server"><b>Duplicating business logic across the client and server</b></a><br/>
 <a href="book.html#_synchronizing_between_clients"><b>Synchronizing between clients</b></a><br/>
 <a href="book.html#_uploading_attachments"><b>Uploading attachments</b></a><br/>
