--- a/release/ar01s08.html
+++ b/release/ar01s08.html
@@ -24,14 +24,14 @@ it using a simple jquery selector, and parse it ourselves.</p><p>Here’s an exa
 
     data = JSON.parse(div.text());
 
-    ExampleApp.init(data);
+    ExampleApp.initialize(data);
   });
 &lt;/script&gt;</pre><p>A reliable way to unencode the HTML-encoded JSON string is to use the browser’s
 native functionality, by settings an element’s <code class="literal">innerHTML</code>.  So in the above
 script, we create a <code class="literal">json_div</code> var, assign its <code class="literal">innerHTML</code> to the bootstrap
 script’s text, and retrieve the innerText back out, unencoded. The final result
 is the <code class="literal">data</code> variable containing proper JSON with no HTML escaping that can be
-parsed and passed along to your app’s init function.</p><p>This approach can be seen on the example app on the
+parsed and passed along to your app’s <code class="literal">initialize</code> function.</p><p>This approach can be seen on the example app on the
 <code class="literal">app/views/tasks/index.html.erb</code> template.</p><p>Now, the application’s models, populated by the bootstrap data structure,
 contains raw data that is not HTML-escaped.  When you render this data into the
 DOM, make sure you escape the HTML at that point in time:</p><pre class="programlisting"><i class="hl-comment" style="color: silver">// From app/assets/javascripts/views/task_item.js:</i>
