Generate new release

--- a/release/book.html
+++ b/release/book.html
@@ -59,7 +59,7 @@ code > span.er { color: #ff0000; font-weight: bold; }
 <li><a href="#conventions-used-in-this-book">Conventions used in this book</a></li>
 </ul></li>
 <li><a href="#getting-up-to-speed">Getting up to speed</a><ul>
-<li><a href="#backbone.online-resources">Backbone.online resources</a></li>
+<li><a href="#backbone-online-resources">Backbone online resources</a></li>
 <li><a href="#javascript-resources">JavaScript resources</a></li>
 </ul></li>
 <li><a href="#organization">Organization</a><ul>
@@ -254,8 +254,8 @@ code > span.er { color: #ff0000; font-weight: bold; }
 </section>
 <section class="level1" id="getting-up-to-speed">
 <h1><a href="#TOC">Getting up to speed</a></h1>
-<section class="level2" id="backbone.online-resources">
-<h2><a href="#TOC">Backbone.online resources</a></h2>
+<section class="level2" id="backbone-online-resources">
+<h2><a href="#TOC">Backbone online resources</a></h2>
 <p>This book is not an introduction, and assumes you have some knowledge of Javascript and of Backbone. Fortunately, there is solid documentation available to get you up to speed on Backbone.</p>
 <p>The online documentation for Backbone is very readable:</p>
 <p><a href="http://documentcloud.github.com/backbone/"><code class="url">http://documentcloud.github.com/backbone/</code></a></p>
